Completed the 'Modeling terms' section

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -299,15 +299,36 @@
       <tr>
         <td><b>Term</b></td><td><b>Definition</b></td><td><b>Superclass IRI</b></td>
       </tr>
-      <tr about="glossary:ECETOC_Developmental_toxicology" typeof="owl:Class">
-        <td property="rdfs:label">ECETOC Developmental toxicology</td>
-        <td><a property="owl:subClassOf" href=""></a></td>
+      <tr about="glossary:Atomistic_model" typeof="owl:Class">
+        <td property="rdfs:label">Atomistic model</td>
+        <td></td>
+        <td></td>
       </tr>
-      <!-- tr about="glossary:" typeof="owl:Class">
-        <td property="rdfs:label">xxx</td>
-        <td property="obo:IAO_0000115">yyy</td>
-        <td><a property="owl:subClassOf" href=""></a></td>
-      </tr -->
+      <tr about="glossary:Computational_model" typeof="owl:Class">
+        <td property="rdfs:label">Computational model</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Continuum_model" typeof="owl:Class">
+        <td property="rdfs:label">Continuum model</td>
+        <td property="obo:IAO_0000115">Continuum theories or models explain variation as involving a gradual quantitative transition without abrupt changes or discontinuities. It can be contrasted with 'categorical' models which propose qualitatively different states.</td>
+        <td><a property="owl:subClassOf" href="http://scai.fraunhofer.de/HuPSON#SCAIVPH_00000644"></a></td>
+      </tr>
+      <tr about="glossary:Electronic_model" typeof="owl:Class">
+        <td property="rdfs:label">Electronic model</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Meta-model" typeof="owl:Class">
+        <td property="rdfs:label">Meta-model</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr about="glossary:Model" typeof="owl:Class">
+        <td property="rdfs:label">Model</td>
+        <td property="obo:IAO_0000115">A mathematical model is the use of mathematical language to describe the behaviour of a system. A mathematical model usually describes a system by a set of variables and a set of equations that establish relationships between the variables. The variables represent some properties of the system, for example, measured system outputs often in the form of signals, timing data, counters, event occurrence (yes/no). The actual model is the set of functions that describe the relations between the different variables. [source: WordIQ online dictionary]</td>
+        <td><a property="owl:subClassOf" href="http://purl.org/obo/owl/SBO#SBO_0000004">SBO_0000004</a></td>
+      </tr>
     </table>
     <h3>Hazard terms</h3>
     These terms originate from https://www.ecetoc.org/sr_19/preface/definitions/.
