Link to the CORDIS database

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -405,7 +405,7 @@
   <section class='informative'>
     <h2>Funding</h2>
     <p>
-      This work received funding from the European Union’s Horizon 2020 research and innovation programme via <a href="https://nanorigo.eu/">NanoRIGO</a> Project under grant agreement No 814530, <a href="https://riskgone.eu/">RiskGONE</a> Project under grant agreement No 814425, and via <a href="https://www.gov4nano.eu/">Gov4Nano</a> under grant agreement No 814401.
+      This work received funding from the European Union’s Horizon 2020 research and innovation programme via <a href="https://nanorigo.eu/">NanoRIGO</a> Project under grant agreement No <a href="https://cordis.europa.eu/project/id/814530">814530</a>, <a href="https://riskgone.eu/">RiskGONE</a> Project under grant agreement No <a href="https://cordis.europa.eu/project/id/814425">814425</a>, and via <a href="https://www.gov4nano.eu/">Gov4Nano</a> under grant agreement No <a href="https://cordis.europa.eu/project/id/814401">814401</a>.
     </p>
   </section>
   
