Added missing author info

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -27,23 +27,23 @@
 
           // editors (optional)
           editors:  [
-             { name: "Iseult Lynch", url: "",
-                company: "", companyURL: "" },
+             { name: "Iseult Lynch", url: "https://orcid.org/0000-0003-4250-4584",
+                company: "University of Birmingham", companyURL: "https://www.birmingham.ac.uk/" },
           ],
           authors:  [
              { name: "Antreas Afantitis",
-                company: "NovaMechanics", companyURL: "" },
+                company: "NovaMechanics", companyURL: "https://novamechanics.com/" },
              { name: "Martine Bakker",
-                company: "RIVM", companyURL: "" },
+                company: "RIVM", companyURL: "https://www.rivm.nl/" },
              { name: "Evert Bouman",
-                company: "NILU", companyURL: "" },
+                company: "NILU", companyURL: "https://www.nilu.com/" },
              { name: "Damjana Drobna",
-                company: "UniLj", companyURL: "" },
+                company: "UniLj", companyURL: "https://www.uni-lj.si/" },
              { name: "Nina Jeliazkova",
-                company: "IdeaConsult", companyURL: "" },
+                company: "IdeaConsult", companyURL: "https://www.ideaconsult.net/" },
              { name: "Laurent Winckers",
                 company: "Maastricht University", companyURL: "https://www.maastrichtuniversity.nl/" },
-             { name: "Egon Willighagen", url: "",
+             { name: "Egon Willighagen", url: "https://orcid.org/0000-0001-7542-0286",
                 company: "Maastricht University", companyURL: "https://www.maastrichtuniversity.nl/" },
           ],
           
