--- a/glossary/index.html
+++ b/glossary/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html prefix="glossary: https://h2020-riskgone.github.io/nmbp13-terminology/glossary/index# rdfs: http://www.w3.org/2000/01/rdf-schema# rdf: http://www.w3.org/1999/02/22-rdf-syntax-ns# xsd: http://www.w3.org/2001/XMLSchema# obo: http://purl.obolibrary.org/obo/" lang="en">>
+<html prefix="glossary: https://h2020-riskgone.github.io/nmbp13-terminology/glossary/index# rdfs: http://www.w3.org/2000/01/rdf-schema# rdf: http://www.w3.org/1999/02/22-rdf-syntax-ns# xsd: http://www.w3.org/2001/XMLSchema# obo: http://purl.obolibrary.org/obo/" lang="en">
 
 <head>
   <title>Joint glossary of key terms related to data management and knowledge infrastructure / portal / platform</title>
@@ -64,13 +64,12 @@
     </p>
   </section>
   <section id="abstract">
-    Abstract
-  </section>
-  <section class='informative'>
-    <h2>Introduction</h2>
     <p about="glossary:" typeof="owl:Ontology">
       The <span property="rdfs:label">Joint glossary of key terms related to data management and knowledge infrastructure / portal / platform</span> summarises the activities of the Core Group on Data Management organized jointly by the three projects funded under the H2020 NMBP-13 call: Gov4Nano, NANORIGO and RiskGONE. These activities reported here took place during the period January-June 2020 as part of the ongoing activities of the data management core group, and is one of the two parallel activities that this core group focussed on over this period (the other activity will be reported separately in Joint Milestone (JM) 2 on prioritisation of databases to be made interoperable).
     </p>
+  </section>
+  <section class='informative'>
+    <h2>Introduction</h2>
     <p>
       A key stumbling block to within and across-project collaboration is unintentional or unacknowledged differences in understanding of the meaning of key terminology, which can arise due to language barriers or as a result of slight disciplinary differences.  Formal ontologies, such as <a href="https://enanomapper.net/ontology">eNanoMapper ontology</a> can help here, as these are directed towards harmonisation and organisation of dataset as well as supporting day-to-day use of terms.  Similarly, standardisation organisations such as <a href="https://www.iso.org/obp/ui/#iso:std:iso:tr:18401:ed-1:v1:en ">ISO have definitions</a> for a lot of terminology related to nanotechnologies and nanomaterials, and consistent use of this is essential, but not always applied in practice.
     </p>
@@ -331,7 +330,7 @@
       </tr>
     </table>
     <h3>Hazard terms</h3>
-    These terms originate from https://www.ecetoc.org/sr_19/preface/definitions/.
+    These terms originate from <a href="https://www.ecetoc.org/sr_19/preface/definitions/">https://www.ecetoc.org/sr_19/preface/definitions/</a>.
     <table width="80%">
       <tr>
         <td><b>Term</b></td><td><b>Definition</b></td><td><b>Superclass IRI</b></td>
