Minor fixed for GitHub Pages

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Joint glossary of key terms related to data management and knowledge infrastructure / portal / platform</title>
-    <script src='js/respec.js' class='remove'></script>
+    <script src='../js/respec.js' class='remove'></script>
     <meta http-equiv='Content-Type' content='text/html;charset=utf-8' />
     <script class='remove'>
       var respecConfig = {
@@ -20,7 +20,7 @@
           //previousPublishDate:  "2020-05-17",
           // previousURI : "http://dev.w3.org/2009/dap/ReSpec.js/documentation.html",
           copyrightStart:       "2020",
-          edDraftURI:           "https://github.com/h2020-riskgone/nmbp13-terminology/blob/main/glossary/index.html",
+          edDraftURI:           "https://h2020-riskgone.github.io/nmbp13-terminology/glossary/",
           // lcEnd:  "2010-08-06",
           // extraCSS:             ["../css/respec.css"],
           // extraCSS:             ["http://dev.w3.org/2009/dap/ReSpec.js/css/respec.css"],
