--- a/glossary/index.html
+++ b/glossary/index.html
@@ -62,6 +62,9 @@
     <p>
       This document is aimed at everyone working in the Gov4Nano, NanoRIGO, RiskGONE projects.
     </p>
+    <p>
+      <a href="https://doi.org/10.5281/zenodo.6801183"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.6801183.svg" alt="DOI"></a>
+    </p>
   </section>
   <section id="abstract">
     <p about="glossary:" typeof="owl:Ontology">
